--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "artichoke-crypto"]
-	path = artichoke-crypto
-	url = https://github.com/qbetti/artichoke-crypto
+[submodule "artichoke-keyring"]
+	path = artichoke-keyring
+	url = https://github.com/qbetti/artichoke-keyring
